appId: host.exp.Exponent
---
- launchApp: {}
- tapOn: Explore
- waitForAnimationToEnd: {}
- scroll: {}
- tapOn: CHECK IN
- waitForAnimationToEnd: {}
- assertVisible: Select your city
- tapOn: San Francisco
- tapOn: CHECK IN
- waitForAnimationToEnd: {}
- assertVisible: You're checked in
- takeScreenshot: checkin-success
